src/test/resources/purescript_examples/failing/MissingClassExport.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith TransitiveExportError\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Test')
        PsiElement(whitespace)(' ')
      PsiElement(()('(')
      PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
        PSValueRefImpl(ValueRef)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('bar')
      PsiElement())(')')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeClassDeclarationImpl(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Foo')
              PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
        PSImpliesImpl(Implies)
          <empty list>
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  ')
        PSTypeDeclarationImpl(TypeDeclaration)
          PSTypeAnnotationNameImpl(TypeAnnotationName)
            PSIdentifierImpl(identifier)
              PsiElement(identifier)('bar')
              PsiElement(whitespace)(' ')
          PsiElement(::)('::')
          PsiElement(whitespace)(' ')
          PSTypeImpl(Type)
            PSTypeAtomImpl(TypeAtom)
              PSIdentifierImpl(GenericIdentifier)
                PsiElement(identifier)('a')
                PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PSTypeImpl(Type)
              PSTypeAtomImpl(TypeAtom)
                PSIdentifierImpl(GenericIdentifier)
                  PsiElement(identifier)('a')
                  PsiElement(whitespace)('\n')
